--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 
-email: your-email@domain.com
+title: Joel Loria
+email: juel7u7@gmail.com
 author: 
 
 # Copyright setting
