--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-# Theme Antarctica
+# Joel Loria
 #
 # Stylish and feature-rich theme for Jekyll
 # 
-# Website: https://github.com/SdtElectronics/jekyll-theme-antarctica
+# Website: https://www.instagram.com/eljueel/
 #
 # See the LICENCE file.
 #
@@ -21,7 +21,7 @@
 
 title: Joel Loria
 email: juel7u7@gmail.com
-author: 
+author: Joel Loria Santana
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
