--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 
 title: Theme Antarctica
 email: your-email@domain.com
-author: SdtElectronics
+author: joelhumbertoloriasantana
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
